--- a/client/src/assets/stylesheets/styles.scss
+++ b/client/src/assets/stylesheets/styles.scss
@@ -98,4 +98,35 @@ html, body {
   }
 }
 
+.landing {
+  margin: auto;
+  display: flex;
+  height: 100%;
+  max-width: 450px;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+}
 
+.landingHead {
+  color: $primary;
+  text-align: center;
+}
+
+
+.landingButton {
+  border:  1px solid $primary;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px $primary inset, 0px 0px 10px -2px $primary;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  color: $primary;
+  padding: 25px;
+  transition-duration: 0.2s;
+}
+
+.landingButton:hover {
+  box-shadow: 0px 0px 10px $primary inset, 0px 0px 10px 6px $primary;;
+}
