--- a/client/src/assets/stylesheets/styles.scss
+++ b/client/src/assets/stylesheets/styles.scss
@@ -98,6 +98,8 @@ html, body {
   }
 }
 
+//LANDING PAGE STYLES
+
 .landing {
   margin: auto;
   display: flex;
@@ -129,4 +131,13 @@ html, body {
 
 .landingButton:hover {
   box-shadow: 0px 0px 10px $primary inset, 0px 0px 10px 6px $primary;;
+}
+
+
+//ERROR HREF HANDLER STYLING 
+
+.errPage {
+  text-align: center;
+  color: $primary;
+  font: $sans-serif;
 }
