--- a/client/src/assets/stylesheets/globals/_color_pallete.scss
+++ b/client/src/assets/stylesheets/globals/_color_pallete.scss
@@ -30,7 +30,9 @@ $border-dark: #303133;
 
 // Shadows
 $shadow-black: 5px 7px 15px -4px #010204;
-$shadow-light: 0px 8px 11px rgba(0, 0, 0, 0.25);
+$shadow-light:  rgba(0, 0, 0, 0.25);  //0px 8px 11px
+$clear: rgba(0,0,0,0);
+$shad-dark: rgba(0,0,0, 0.8666667);
 
 //loading skeleton
 $loading-background: #151618;
