--- a/client/src/assets/stylesheets/styles.scss
+++ b/client/src/assets/stylesheets/styles.scss
@@ -78,8 +78,8 @@ html, body {
   font-family: $nunito;
   max-width: 100%;
   overflow-x: hidden;
-  background: $background-black;
   scroll-behavior: smooth;
+  z-index: -2;
 }
 
 ::-webkit-scrollbar {
@@ -140,4 +140,147 @@ html, body {
   text-align: center;
   color: $primary;
   font: $sans-serif;
+}
+
+
+//EXPLORE PAGE 
+
+//HEAD
+
+.headContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.exploreBack {
+  width: 55px;
+  height: 55px;
+  margin-top: 30px;
+  margin-left: 15px;
+  opacity: 70%;
+  transition-duration: 0.25s;
+}
+
+.exploreBack:hover {
+  opacity: 100%;
+}
+
+.exploreTabs {
+  position: relative;
+  top: -475px;
+  width:100%;
+  height:40px;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 15px;
+  gap: 15px;
+
+
+}
+.tabButton {
+  height: 40px;
+  border: 1px solid $grey;
+  padding: 8px 30px;
+  border-radius: 50px;
+  transition-duration: 0.25s;
+  z-index: 2;
+  color: $grey
+}
+
+.tabButton:hover {
+  border: 1px solid $primary;
+  color: $primary;
+}
+
+.exploreVideo {
+  transform: translateY(-40%);
+  z-index: -1;
+}
+//BODY
+// EXPLORE CARDS
+
+.exploreHead {
+  width:100%;
+  height:33%;
+}
+
+.exploreBody {
+  padding-left: 15px;
+  padding-right: 15px;
+  z-index: 1;
+}
+
+.cardGrid {
+  display: grid;
+  gap: 15px;
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+.eventCard {
+  height: 400px;
+  border-radius: 20px;
+  background: $white;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  box-shadow: 0px 8px 11px $shadow-light;
+  color: $white;
+  font-family: $nunito;
+}
+
+.cardGradient {
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+  top: 88px;
+  width:100%;
+  height:100%;
+  background: linear-gradient($clear 0%, $clear 40%,$clear 40%, $shad-dark 90%, #000 100%);
+}
+
+.eventCardInfo {
+  display: flex;
+  z-index: 1;
+  width: 100%;
+  text-shadow:  0 0 10px $shadow-black;
+}
+
+.eventCardDate {
+  display: flex;
+  flex-direction: column;
+  border-right: $white 1px solid;
+  padding-right: 15px;
+  margin-right: 10px;
+  padding-left: 15px;
+  text-align: center;
+  align-items: center;
+  font-family: Circular Std;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.eventCardAvi {
+  position: relative;
+  top: -305px;
+  margin-left: 15px;
+  z-index: 1;
+  width: 44px;
+  height: 54px;
+  border-radius: 10000px;
+  box-shadow: 0px 8px 11px $shadow-light;
+  background-color: $white;
+}
+
+.eventName {
+  font-family: Circular Std;
+  font-weight: 600;
+  font-size: medium;
+}
+
+.groupName {
+  font-family: $sans-serif;
+  font-weight: 100;
+  font-style: italic;
+  font-size: smaller;
 }
