--- a/client/src/assets/stylesheets/styles.scss
+++ b/client/src/assets/stylesheets/styles.scss
@@ -80,6 +80,8 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   z-index: -2;
+  background-color: $background-dark;
+  position: relative;
 }
 
 ::-webkit-scrollbar {
@@ -167,7 +169,7 @@ html, body {
 
 .exploreTabs {
   position: relative;
-  top: -475px;
+  margin-bottom: 10px;
   width:100%;
   height:40px;
   display: flex;
@@ -205,8 +207,8 @@ html, body {
 }
 
 .exploreBody {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
   z-index: 1;
 }
 
@@ -218,8 +220,8 @@ html, body {
 }
 
 .eventCard {
-  height: 400px;
-  border-radius: 20px;
+  height: 500px;
+  border-radius: 20px 20px 20px 20px;
   background: $white;
   display: flex;
   flex-direction: column;
@@ -231,6 +233,7 @@ html, body {
 
 .cardGradient {
   background-size: cover;
+  border-radius: 20px;
   position: relative;
   z-index: 0;
   top: 88px;
@@ -262,7 +265,7 @@ html, body {
 
 .eventCardAvi {
   position: relative;
-  top: -305px;
+  top: -400px;
   margin-left: 15px;
   z-index: 1;
   width: 44px;
