tabulation is all gucci

--- a/client/src/assets/stylesheets/styles.scss
+++ b/client/src/assets/stylesheets/styles.scss
@@ -278,7 +278,7 @@ html, body {
 .eventName {
   font-family: Circular Std;
   font-weight: 600;
-  font-size: medium;
+  font-size: small;
 }
 
 .groupName {
