--- a/client/src/assets/stylesheets/styles.scss
+++ b/client/src/assets/stylesheets/styles.scss
@@ -139,6 +139,20 @@ html, body {
   animation: fadeIn 3.5s forwards ease-in;
 }
 
+.secondaryLandingButton {
+  border:  1px solid $secondary;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px $secondary inset, 0px 0px 10px -2px $secondary;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  align-content: center;
+  color: $secondary;
+  padding: 25px;
+  transition-duration: 0.2s;
+  animation: fadeIn 3.5s forwards ease-in;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;  
@@ -152,6 +166,9 @@ html, body {
   box-shadow: 0px 0px 10px $primary inset, 0px 0px 10px 6px $primary;;
 }
 
+.secondaryLandingButton:hover {
+  box-shadow: 0px 0px 10px $secondary inset, 0px 0px 10px 6px $secondary;;
+}
 
 //ERROR HREF HANDLER STYLING 
 
@@ -203,7 +220,9 @@ html, body {
   border-radius: 50px;
   transition-duration: 0.25s;
   z-index: 2;
-  color: $grey
+  color: $grey;
+  font-family: Circular Std;
+  font-weight: 600;
 }
 
 .tabButton:hover {
